Colaboratory를 통해 생성됨

--- a/wk04_tuple_dictionary_function_py17.ipynb
+++ b/wk04_tuple_dictionary_function_py17.ipynb
@@ -3572,7 +3572,11 @@
       "metadata": {
         "id": "-QlCXtq6zo1s",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "95babc4e-65f7-4479-cab4-34b4e2000d31"
       },
       "cell_type": "code",
       "source": [
@@ -3580,14 +3584,26 @@
         "for i in range(10, 21):\n",
         "    print(i, end=' ')   # 줄바꿈하지 않고 공백을 추가하여 반복하는 변수를 표시"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10 11 12 13 14 15 16 17 18 19 20 "
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "mc84sOGnzo1u",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "b26e449e-eedb-4a53-91d1-16721e2f3644"
       },
       "cell_type": "code",
       "source": [
@@ -3595,36 +3611,68 @@
         "for i in range(10, 21, 2):  # 10부터 20까지, 2씩 증가\n",
         "    print(i, end=' ')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10 12 14 16 18 20 "
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "5rtzo-Ewzo1w",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "0bb3059e-7628-4c8d-aed4-8e8a6f7433ad"
       },
       "cell_type": "code",
       "source": [
         "for i in range(10, 21, 3):  # 10부터 19까지, 3씩 증가\n",
         "    print(i, end=' ')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10 13 16 19 "
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "1MYveMFpzo1x",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ad83e5eb-1d7c-46f2-e271-cd17a95dc3fa"
       },
       "cell_type": "code",
       "source": [
         "for i in range(20, 9, -1):  # 20부터 10까지, 1씩 감소\n",
         "    print(i, end=' ')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "20 19 18 17 16 15 14 13 12 11 10 "
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -3640,7 +3688,11 @@
       "metadata": {
         "id": "DcPj9siCzo1y",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "114250f9-dfa6-4099-9a0e-df831100070d"
       },
       "cell_type": "code",
       "source": [
@@ -3655,14 +3707,26 @@
         "    print(counter, item, end=' ')\n",
         "    counter += 1"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 야구 1 축구 2 농구 3 배구 4 탁구 "
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "egwfukfhzo10",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "adb31464-3c75-426c-d8ed-aa4ef511deed"
       },
       "cell_type": "code",
       "source": [
@@ -3670,14 +3734,26 @@
         "for cnt in range(len(seq)):\n",
         "    print(cnt, seq[cnt], end=' ')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 야구 1 축구 2 농구 3 배구 4 탁구 "
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "Nm1WpmTxzo11",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "0b21795b-be43-456c-a68b-35ba1685c4c5"
       },
       "cell_type": "code",
       "source": [
@@ -3685,8 +3761,16 @@
         "for cnt, item in enumerate(seq):\n",
         "    print(cnt, item, end=' ')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 야구 1 축구 2 농구 3 배구 4 탁구 "
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -3702,7 +3786,11 @@
       "metadata": {
         "id": "IdBQHrMfzo13",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        },
+        "outputId": "9360efab-e2bf-4865-f98b-0311c3c93fa2"
       },
       "cell_type": "code",
       "source": [
@@ -3710,8 +3798,19 @@
         "for n, w in zip([1, 2, 3, 4], ['a', 'b', 'c', 'd']):\n",
         "    print(n, w)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 a\n",
+            "2 b\n",
+            "3 c\n",
+            "4 d\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -3745,7 +3844,11 @@
       "metadata": {
         "id": "n8vgyP35zo14",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "bc7d80d3-3be8-4018-9300-f52496c98dab"
       },
       "cell_type": "code",
       "source": [
@@ -3753,8 +3856,51 @@
         "alist = foo()\n",
         "alist           # 반환값으로 받은 리스트 보기"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "IORszSoH1nyb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a29840fb-2103-4483-bd73-8d6e3e21584c"
+      },
+      "cell_type": "code",
+      "source": [
+        "type(alist)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     },
     {
       "metadata": {
@@ -3789,7 +3935,11 @@
       "metadata": {
         "id": "5D0IUTnnzo1-",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9125129e-41bb-4829-99c5-cf52fbb936b5"
       },
       "cell_type": "code",
       "source": [
@@ -3798,8 +3948,16 @@
         "minvalue, maxvalue, average = digest(monk_fish_team)\n",
         "print(minvalue, maxvalue, average)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "145 163 156.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -3825,30 +3983,58 @@
       "metadata": {
         "id": "QOBrXdIkzo1_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "711d0272-2a1f-4068-8e79-cf799e9e4be5"
       },
       "cell_type": "code",
       "source": [
         "# 함수로 인수 리스트를 받기\n",
-        "def foo(a, b, *vals):   # *인수를 갖는 함수를 정의\n",
+        "def foo(a, b, *vals):   # *인수를 갖는 함수를 정의(*vals는 남는 함수를 묶어서 반환)\n",
         "    print(a, b, vals)\n",
         "foo(1, 2, 3, 4, 5)      # 5개의 값을 인수로 지정하여 호출"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 2 (3, 4, 5)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "dCsxICNgzo2B",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 172
+        },
+        "outputId": "d011e9b2-4bd7-4308-b388-3c7182f0af18"
       },
       "cell_type": "code",
       "source": [
         "foo(1, 2, c=3)          # c라고 하는 미정의 키워드 인수를 지정"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-15-9b94e6067912>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m          \u001b[0;31m# c라고 하는 미정의 키워드 인수를 지정\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: foo() got an unexpected keyword argument 'c'"
+          ]
+        }
+      ]
     },
     {
       "metadata": {
@@ -3864,18 +4050,30 @@
       "metadata": {
         "id": "LyPvlT28zo2C",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "87440291-0b9a-4d43-98fa-75a7a05ae0a0"
       },
       "cell_type": "code",
       "source": [
         "# 정의되지 않은 키워드 인수\n",
-        "def bar(a, b, **args):    # **인수를 갖는 함수를 정의\n",
+        "def bar(a, b, **args):    # **인수를 갖는 함수를 정의(**는 dictionary 구조)\n",
         "    print(a, b, args)\n",
         "\n",
         "bar(1, 2, c=3, d=4)       # 정의하지 않은 키워드 인수를 정의"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1 2 {'c': 3, 'd': 4}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -3908,8 +4106,8 @@
       "cell_type": "code",
       "source": [
         "def append_to(a_list, b_list=[]):\n",
-        "    # 변경 가능한 객체(목록)를 기본 인수로 가지는 함수를 정의\n",
-        "    b_list.append(0)\n",
+        "    # 변경 가능한 객체인 list(목록)를 기본 인수로 가지는 함수를 정의\n",
+        "    b_list.append(0)  #추가할 때는 append 함수 사용\n",
         "    return a_list+b_list"
       ],
       "execution_count": 0,
@@ -3919,7 +4117,11 @@
       "metadata": {
         "id": "4kyFAdvEzo2F",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "68ac9e66-a20a-48d4-b80d-3ac66bac8a5e"
       },
       "cell_type": "code",
       "source": [
@@ -3928,27 +4130,61 @@
         "list_2 = append_to(list_1)\n",
         "list_2                       # 결과 표시"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 0, 0]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
     },
     {
       "metadata": {
         "id": "0T1oJazaR9y7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "55e45f7e-58a4-4d14-cbd2-317afe37f040"
       },
       "cell_type": "code",
       "source": [
         "list_1"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
     },
     {
       "metadata": {
         "id": "hNYTnCuMzo2F",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "77912213-6a89-44a1-ad87-b931ae928842"
       },
       "cell_type": "code",
       "source": [
@@ -3957,14 +4193,31 @@
         "# 결과의 끝은 [0, 0]이 된다\n",
         "list_3"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 0, 0, 0]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
     },
     {
       "metadata": {
         "id": "QXqd8W_Qzo2G",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "81b6a24b-1e83-41b1-b099-f675e3671a83"
       },
       "cell_type": "code",
       "source": [
@@ -3972,8 +4225,21 @@
         "# 인수 b_list에 추가, 0이 추가되기 때문에 결과가 달라진다\n",
         "list_3"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 0, 0, 0, 0]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
     },
     {
       "metadata": {
