Colaboratory를 통해 생성됨

--- a/wk05_file_py17.ipynb
+++ b/wk05_file_py17.ipynb
@@ -166,7 +166,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 94
         },
-        "outputId": "e5181846-4ebd-49d0-e20d-238e20c164c3"
+        "outputId": "e5eadc72-96ea-49da-af06-7fac64aec8e9"
       },
       "cell_type": "code",
       "source": [
@@ -178,15 +178,15 @@
         "  print('User uploaded file \"{name}\" with length {length} bytes'.format(\n",
         "      name=fn, length=len(uploaded[fn])))"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-e10a3459-6317-4970-88fd-1cfe1f37bde5\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-e10a3459-6317-4970-88fd-1cfe1f37bde5\">\n",
+              "     <input type=\"file\" id=\"files-299b0783-293f-4354-ae6b-093ff4dfa962\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-299b0783-293f-4354-ae6b-093ff4dfa962\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -203,8 +203,8 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving test.txt to test.txt\n",
-            "User uploaded file \"test.txt\" with length 377 bytes\n"
+            "Saving foo.txt to foo.txt\n",
+            "User uploaded file \"foo.txt\" with length 316 bytes\n"
           ],
           "name": "stdout"
         }
@@ -218,7 +218,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 179
         },
-        "outputId": "15ac6e86-117e-4fb5-d44f-8937d67529d2"
+        "outputId": "38e0c7dc-7483-4007-8abc-229691e5cf2f"
       },
       "cell_type": "code",
       "source": [
@@ -284,7 +284,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 94
         },
-        "outputId": "336e9e03-dd57-4c64-e47e-2e70ede6d20b"
+        "outputId": "b6f3dee7-b0a0-40d7-81e1-26078c391021"
       },
       "cell_type": "code",
       "source": [
@@ -296,15 +296,15 @@
         "  print('User uploaded file \"{name}\" with length {length} bytes'.format(\n",
         "      name=fn, length=len(uploaded[fn])))"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-bf3c2374-e814-426f-bf41-95fe70bf317a\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-bf3c2374-e814-426f-bf41-95fe70bf317a\">\n",
+              "     <input type=\"file\" id=\"files-639bada5-33c8-471a-b0b1-0376191d55ad\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-639bada5-33c8-471a-b0b1-0376191d55ad\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -321,7 +321,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Saving test.txt to test (1).txt\n",
+            "Saving test.txt to test.txt\n",
             "User uploaded file \"test.txt\" with length 377 bytes\n"
           ],
           "name": "stdout"
@@ -336,7 +336,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 197
         },
-        "outputId": "2b9944d7-e22e-4279-efc8-18473899b59f"
+        "outputId": "9af734e7-c8bf-4efd-c417-3ab9d1383985"
       },
       "cell_type": "code",
       "source": [
@@ -345,7 +345,7 @@
         "for line in f:             # 파일로부터 1행씩 읽어냄\n",
         "    print(line, end=\" \")   # 1행씩 표시하기"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,15 +434,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
-        "outputId": "48674673-066d-47a1-9255-5097096907e5"
+        "outputId": "89af8854-67cb-4293-836c-edeb5624b35a"
       },
       "cell_type": "code",
       "source": [
-        "!ls"
+        "!ls  # list 현재 폴더안에 어떤 파일들이 있는가"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,15 +459,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
-        "outputId": "0de13687-8594-407e-d038-006a0d69b546"
+        "outputId": "5ac9621b-7962-4c45-80e8-57f699642706"
       },
       "cell_type": "code",
       "source": [
-        "ls"
+        "ls # sample_data는 구글에서 제공해주는 손글씨 데이터, 아나콘다에서는 에러발생"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,15 +484,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 73
+          "height": 71
         },
-        "outputId": "ae10d4ff-c8fc-48b7-fa85-2b3e39d9aa4f"
+        "outputId": "1502d95e-9525-4127-a7ba-31d6178761d4"
       },
       "cell_type": "code",
       "source": [
-        "ls sample_data/"
+        "ls sample_data/ "
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,15 +511,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 355
+          "height": 323
         },
-        "outputId": "371b5e60-fa5c-414a-a000-54d66f27810c"
+        "outputId": "405f3a12-f66a-43ad-f47c-c48cb5233ab4"
       },
       "cell_type": "code",
       "source": [
         "cat sample_data/README.md\n"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,15 +578,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
-        "outputId": "771589ba-2cbc-406d-867c-13999608a361"
+        "outputId": "1b208572-f1ec-4a8a-a2ba-7739501a0d91"
       },
       "cell_type": "code",
       "source": [
         "ls"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,15 +603,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 185
+          "height": 179
         },
-        "outputId": "42d16f07-8263-471d-fb9a-9d68f48c382e"
+        "outputId": "4af8f6fb-cbae-488a-f072-22b3b92434be"
       },
       "cell_type": "code",
       "source": [
         "cat newfile.txt"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -660,9 +660,9 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 96
+          "height": 94
         },
-        "outputId": "02b75a6f-ecd6-4b60-bbdf-8a2770ac799e"
+        "outputId": "d8fc6982-be15-43ba-f88b-11e6b4144e6a"
       },
       "cell_type": "code",
       "source": [
@@ -674,15 +674,15 @@
         "  print('User uploaded file \"{name}\" with length {length} bytes'.format(\n",
         "      name=fn, length=len(uploaded[fn])))"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-a93c33ac-4bf2-4286-9845-9dd364d58582\" name=\"files[]\" multiple disabled />\n",
-              "     <output id=\"result-a93c33ac-4bf2-4286-9845-9dd364d58582\">\n",
+              "     <input type=\"file\" id=\"files-6404a211-5f28-45e2-a3f9-ff1bf0c1bc16\" name=\"files[]\" multiple disabled />\n",
+              "     <output id=\"result-6404a211-5f28-45e2-a3f9-ff1bf0c1bc16\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -712,18 +712,18 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
-        "outputId": "21adf74e-adb2-489d-fe89-2e01e8c22c18"
+        "outputId": "a6c10679-1271-42a8-9d40-ae477ca3ecc1"
       },
       "cell_type": "code",
       "source": [
-        "imgfile = open('colab.png', 'rb')\n",
+        "imgfile = open('colab.png', 'rb')  # rb는 read binary이다. 바이너리 파일을 읽을때 쓴다.\n",
         "imgsrc = imgfile.read()\n",
         "if imgsrc[1:4] == b'PNG':\n",
         "    print('image/png')"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,15 +740,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
-        "outputId": "cb667502-13c5-47e7-e61c-4b31b701e29a"
+        "outputId": "e328d996-5bdb-4e24-d302-a3e7ff763e86"
       },
       "cell_type": "code",
       "source": [
         "imgfile"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -760,7 +760,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 15
         }
       ]
     },
@@ -785,7 +785,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 373
         },
-        "outputId": "58ff9daa-a6b2-41b2-a40d-98999411b2d9"
+        "outputId": "625fcc0c-613b-4435-d0e2-b40039523921"
       },
       "cell_type": "code",
       "source": [
@@ -793,7 +793,7 @@
         "from IPython.display import Image, display\n",
         "display(Image('colab.png'))"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -825,9 +825,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 36
+          "height": 35
         },
-        "outputId": "1ca9e4e5-8516-4851-c4f6-ebbc0cb9f01c"
+        "outputId": "d13cbbd4-9f2c-4196-888b-d7404442607c"
       },
       "cell_type": "code",
       "source": [
@@ -836,7 +836,7 @@
         "# 파일 시스템의 인코딩을 표시\n",
         "sys.getfilesystemencoding()"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -848,7 +848,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 18
         }
       ]
     },
@@ -859,7 +859,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### [DIY] \"The end of the world\" 가사에 사용된 영어 단어 수를 정리하시오.\n",
+        "### [DIY] \"The end of the world\" 가사에 사용된 영어 단어 수를 정리하시오. 중요!\n",
         "\n",
         "> [참고] 딕셔너리의 키를 이용한 영어 단어 출현 수 계산 코드 (wk04 code 참조)"
       ]
@@ -867,6 +867,66 @@
     {
       "metadata": {
         "id": "YVgK4x8hSPvV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "884b9154-774c-4193-a812-aed06582118c"
+      },
+      "cell_type": "code",
+      "source": [
+        "line = s\n",
+        "wordcnt = {}              # 딕셔너리를 초기화\n",
+        "for word in line.split():   # 단어를 구분해주는 함수 split\n",
+        "    if word in wordcnt:\n",
+        "        wordcnt[word] = wordcnt[word]+1   # 분리한 단어들의 빈도\n",
+        "    else:\n",
+        "        wordcnt[word] = 1\n",
+        "print(wordcnt)  "
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'The': 1, 'end': 3, 'of': 3, 'the': 9, 'world': 1, '(세상': 1, '끝)': 1, 'Why': 4, 'does': 2, 'sun': 1, 'go': 2, 'on': 2, 'shining?': 1, 'sea': 1, 'rush': 1, 'to': 1, 'shore?': 1, \"Don't\": 2, 'they': 2, 'know': 2, \"it's\": 2, 'world?': 2, \"'Cause\": 1, 'you': 1, \"don't\": 1, 'love': 2, 'me': 1, 'anymore': 1, 'do': 2, 'birds': 1, 'singing?': 1, 'stars': 1, 'glow': 1, 'above?': 1, 'It': 1, 'ended': 1, 'when': 1, 'I': 1, 'lost': 1, 'your': 1}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "YHnZdDmx91-w",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "outputId": "fdb35567-cdb3-4581-be94-dd08a38dcf15"
+      },
+      "cell_type": "code",
+      "source": [
+        "wordcnt = {}              # 딕셔너리를 초기화\n",
+        "for word in line.split():\n",
+        "    wordcnt[word] = wordcnt.get(word, 0)+1\n",
+        "print(wordcnt)"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'The': 1, 'end': 3, 'of': 3, 'the': 9, 'world': 1, '(세상': 1, '끝)': 1, 'Why': 4, 'does': 2, 'sun': 1, 'go': 2, 'on': 2, 'shining?': 1, 'sea': 1, 'rush': 1, 'to': 1, 'shore?': 1, \"Don't\": 2, 'they': 2, 'know': 2, \"it's\": 2, 'world?': 2, \"'Cause\": 1, 'you': 1, \"don't\": 1, 'love': 2, 'me': 1, 'anymore': 1, 'do': 2, 'birds': 1, 'singing?': 1, 'stars': 1, 'glow': 1, 'above?': 1, 'It': 1, 'ended': 1, 'when': 1, 'I': 1, 'lost': 1, 'your': 1}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "uxwjJZtb-IWY",
         "colab_type": "code",
         "colab": {}
       },
